# notion-ical-sync

./: .dockerignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts  test_ical.sh  validate_ics.py  validate_ics.sh
.github/workflows/: build.yml
e2e/: caldav-ui.spec.ts
k8s/: ingress.yaml  service.yaml
src/: caldav.rs  lib.rs  main.rs  notion.rs  notion_fs.rs  ui.rs
tests/: caldav_smoke_test.rs
