[package]
name = "notion-ical-sync"
version = "0.2.0"
edition = "2021"

[dependencies]
dav-server = { version = "0.11", features = ["caldav", "hyper", "memfs"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
icalendar = "0.17"
futures-util = "0.3"
url = "2"
bytes = "1"
http = "1"
parking_lot = "0.12"
dyn-clone = "1"
axum = "0.8.9"
